--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -58,10 +58,17 @@
             </select>
             <select name="" id="">
               <option value="">Type</option>
+              {{#each ../system.damageType as |type|}}
+              <option value="{{type}}">{{type}}</option>
+              {{/each}}
             </select>
           </div>
         </div>
-        <button class="delete-button">
+        <button
+          class="delete-button"
+          data-action="delete-weapon"
+          data-weapon-id="{{weapon._id}}"
+        >
           <i class="fa-solid fa-trash"></i>
         </button>
       </li>
