--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -196,4 +196,29 @@
   <div class="scion-label-title">
     <h2>Combat, Soak & Armor</h2>
   </div>
+  <div class="combat-armor-grid">
+    <div class="combat-armor-grid-item">
+      <div class="scion-label-small-subtitle">
+        <h2>Defense Values</h2>
+      </div>
+      <div class="defense-value-dodge">
+        <span>Dodge:</span>
+        <input type="text" placeholder="Value" />
+      </div>
+      <div class="defense-value-parry">
+        <span>Parry:</span>
+        <input type="text" placeholder="value" />
+      </div>
+    </div>
+    <div class="combat-armor-grid-item">
+      <div class="scion-label-small-subtitle">
+        <h2>Armor</h2>
+      </div>
+    </div>
+    <div class="combat-armor-grid-item">
+      <div class="scion-label-small-subtitle">
+        <h2>Soak</h2>
+      </div>
+    </div>
+  </div>
 </div>
