--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -257,6 +257,35 @@
       <div class="scion-label-small-subtitle">
         <h2>Soak</h2>
       </div>
+      <div class="soak-wrapper">
+        <div class="armor-stats">
+          <div class="aggraveted">
+            <span>A</span>
+            <input
+              type="text"
+              value="{{system.combat.soak.Aggravated.value}}"
+            />
+          </div>
+          <div class="lethal">
+            <span>L</span>
+            <input type="text" value="{{system.combat.soak.Lethal.value}}" />
+          </div>
+          <div class="bashing">
+            <span>B</span>
+            <input type="text" value="{{system.combat.soak.Bashing.value}}" />
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
+<div class="health">
+  <div class="scion-label-title">
+    <h2>Health</h2>
+  </div>
+</div>
+<div class="experience">
+  <div class="scion-label-title">
+    <h2>Experience</h2>
   </div>
 </div>
