--- a/styles/partials/combat.css
+++ b/styles/partials/combat.css
@@ -227,3 +227,18 @@
   min-width: 0;
   padding: 10px;
 }
+
+.health-line {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  gap: 0.7rem;
+}
+
+.health-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
