--- a/styles/dialogs/pantheon.css
+++ b/styles/dialogs/pantheon.css
@@ -1,3 +1,8 @@
+.pantheon-dialog {
+  width: 700px;
+  height: 500px;
+}
+
 .pantheon-form,
 .pantheon-group {
   width: 100%;
@@ -8,6 +13,11 @@
   gap: 0.5rem;
   margin: 0 !important;
   font-family: skranji-regular, sans-serif !important;
+  background: rgba(254, 254, 254, 255);
+  padding: 15px 15px;
+  border-radius: 5px;
+  min-height: 25.875rem;
+  color: #222;
 }
 
 .pantheon-form {
@@ -33,6 +43,7 @@
   margin: 0 0 0.1rem !important;
   padding: 0 !important;
   border: none !important;
+  color: #222;
 }
 
 .pantheon-group-content {
@@ -85,7 +96,7 @@
 
 .pantheon-item {
   padding: 1rem;
-  border-bottom: 1px solid var(--color-border-light-tertiary);
+  border-bottom: 1px solid #222;
   transition: background-color 0.3s ease;
   text-transform: capitalize;
 }
@@ -118,15 +129,23 @@
 }
 
 /* Fixar os botões do Dialog no fundo */
-.dialog .dialog-buttons {
+.dialog-form .form-footer {
   position: sticky;
   bottom: 0;
   left: 0;
   width: 100%;
-  background: inherit;
+  background-color: rgb(255 255 255);
   z-index: 10;
-  padding-bottom: 0px;
+  padding: 10px;
   box-shadow: 0 -2px 8px -6px #0002;
+  border-radius: 4px;
+}
+
+.dialog-form .form-footer button {
+  color: #222;
+  font-size: 19px;
+  font-weight: bold;
+  font-family: skranji-regular, sans-serif !important;
 }
 
 /* Garante rolagem suave e espaço para os botões */
