--- a/styles/dialogs/dialogDiceRoll.css
+++ b/styles/dialogs/dialogDiceRoll.css
@@ -3,6 +3,27 @@
   height: 250px;
 }
 
+.weapon-dialog {
+  width: 550px;
+  height: 340px;
+}
+
+.weapon-dialog-form,
+.weapon-dialog-group {
+  width: 100%;
+  min-height: 100px;
+  position: relative;
+  display: flex;
+  flex-direction: column !important;
+  gap: 0.5rem;
+  margin: 0 !important;
+  font-family: skranji-regular, sans-serif !important;
+  background: rgba(254, 254, 254, 255);
+  padding: 15px 15px;
+  border-radius: 5px;
+  color: #222;
+}
+
 .attr-dialog-form,
 .attr-dialog-group {
   width: 100%;
@@ -20,13 +41,20 @@
   color: #222;
 }
 
-.attr-dialog-group-header > h1 {
+.attr-dialog-group-header > h1,
+.weapon-dialog-group-header > h1,
+.weapon-dialog-group-header > h2 {
   margin: 0 0 1.5rem !important;
   padding: 0 !important;
   border: none !important;
   font-family: skranji-regular, sans-serif !important;
   color: #222;
   font-size: 25px;
+}
+
+.weapon-dialog-group-header > h2 {
+  font-size: 18px;
+  margin-bottom: 10px !important;
 }
 
 .attr-dialog-content select {
@@ -55,4 +83,34 @@
 
 .roll-skill-dialog .window-content {
   overflow: hidden;
+}
+
+.weapon-dialog-content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+  flex: 1;
+}
+
+.actions,
+.extra-info {
+  display: flex;
+  gap: 0.5rem;
+  width: 100%;
+  align-items: center;
+}
+
+.multiple-atk select,
+.target select {
+  width: 15rem;
+}
+
+.extra-info input[type="text"] {
+  padding: 10px;
+}
+
+.extra-info {
+  flex-direction: column;
+  align-items: flex-start;
 }
