create: creating area to control dice roll

--- a/templates/diceRoll/dice-result.html
+++ b/templates/diceRoll/dice-result.html
@@ -32,6 +32,6 @@
   </div>
   <div class="total-result">
     <span>Total Result:</span>
-    <span>{{sum data.totalSucess data.epicAttribute}}</span>
+    <span>{{sum data.totalSucess data.totalEpicSuccess}}</span>
   </div>
 </div>
