--- a/templates/diceRoll/dice-result.html
+++ b/templates/diceRoll/dice-result.html
@@ -1,6 +1,6 @@
 <div class="dice-result">
   <h3>Dice Roll Result</h3>
-  <span>{{data.title}}</span>
+  <span>{{{data.title}}}</span>
   <div class="dice-result-wrapper">
     {{#if data.explodedDices.length}}
     <div class="exploded-dices">
