--- a/templates/actors/dialogs/choose-attr.html
+++ b/templates/actors/dialogs/choose-attr.html
@@ -10,6 +10,10 @@
         <option value="{{attr}}">{{attr}}</option>
         {{/each}}
       </select>
+      <div class="difficulty">
+        <label for="difficulty">Difficulty</label>
+        <input type="number" name="difficulty" value="7" />
+      </div>
     </section>
   </div>
 </form>
