update: updating value abour tests

--- a/templates/actors/dialogs/weapon-atk.html
+++ b/templates/actors/dialogs/weapon-atk.html
@@ -18,6 +18,10 @@
         <label for="extra-dices">Extra Dices:</label>
         <input type="text" name="extra-dices" value="0" />
       </div>
+      <div class="difficulty">
+        <label for="difficulty">Difficulty</label>
+        <input type="number" name="difficulty" value="7" />
+      </div>
     </section>
   </div>
 </form>
