--- a/styles/dialogs/dialogDiceRoll.css
+++ b/styles/dialogs/dialogDiceRoll.css
@@ -5,7 +5,7 @@
 
 .weapon-dialog {
   width: 550px;
-  height: 340px;
+  height: 405px;
 }
 
 .damage-dialog {
@@ -80,11 +80,12 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  width: 100%;
 }
 
-.difficulty label {
+.difficulty label,
+.extra-info label {
   font-size: 16px;
-  font-weight: bold;
 }
 
 .attr-dialog-content input[type="number"] {
