update: updating value abour tests

--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -152,7 +152,7 @@
   </div>
   <div class="willpower-legend-wrapper">
     <div class="willpower">
-      <div class="scion-label-subtitle">
+      <div class="scion-label-subtitle" data-type="willpower" data-action="roll-willpower">
         <h2>Willpower</h2>
       </div>
       <div class="points">
@@ -180,7 +180,7 @@
       </div>
     </div>
     <div class="legend">
-      <div class="scion-label-subtitle">
+      <div class="scion-label-subtitle" data-type="legend" data-action="roll-legend">
         <h2>Legend</h2>
       </div>
       <div class="points">
