--- a/templates/actors/partials/stats.html
+++ b/templates/actors/partials/stats.html
@@ -11,6 +11,7 @@
         <div
           class="attribute-column"
           data-action="roll-attribute"
+          data-type="attribute"
           data-key="{{key}}"
           data-label="{{label}}"
         >
