--- a/styles/dialogs/dialogDiceRoll.css
+++ b/styles/dialogs/dialogDiceRoll.css
@@ -3,6 +3,11 @@
   height: 290px;
 }
 
+.difficulty-dialog {
+  width: 500px;
+  height: 220px;
+}
+
 .weapon-dialog {
   width: 550px;
   height: 405px;
@@ -17,6 +22,20 @@
 .weapon-dialog-group,
 .damage-atk-group {
   width: 100%;
+  min-height: 100px;
+  position: relative;
+  display: flex;
+  flex-direction: column !important;
+  gap: 0.5rem;
+  margin: 0 !important;
+  font-family: skranji-regular, sans-serif !important;
+  background: rgba(254, 254, 254, 255);
+  padding: 15px 15px;
+  border-radius: 5px;
+  color: #222;
+}
+
+.difficulty-dialog-content {
   min-height: 100px;
   position: relative;
   display: flex;
