create: creating method of drag and drop

--- a/templates/actors/partials/birth-virtues.html
+++ b/templates/actors/partials/birth-virtues.html
@@ -73,6 +73,7 @@
                         data-action="update-birthright-boon"
                         placeholder="Boon name"
                       />
+                      <span>Level:</span>
                       <input
                         type="text"
                         value="{{boon.level}}"
