--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -280,15 +280,16 @@
             <input
               type="text"
               value="{{system.combat.soak.Aggravated.value}}"
+              disabled
             />
           </div>
           <div class="lethal">
             <span>L</span>
-            <input type="text" value="{{system.combat.soak.Lethal.value}}" />
+            <input type="text" value="{{system.combat.soak.Lethal.value}}" disabled />
           </div>
           <div class="bashing">
             <span>B</span>
-            <input type="text" value="{{system.combat.soak.Bashing.value}}" />
+            <input type="text" value="{{system.combat.soak.Bashing.value}}" disabled />
           </div>
         </div>
       </div>
