create: creating join battle

--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -212,6 +212,9 @@
   <div class="scion-label-title">
     <h2>Combat, Soak & Armor</h2>
   </div>
+  <div class="join-battle">
+    <button data-action="join-battle">Join Battle</button>
+  </div>
   <div class="combat-armor-grid">
     <div class="combat-armor-grid-item">
       <div class="scion-label-small-subtitle">
