--- a/templates/actors/partials/combat.html
+++ b/templates/actors/partials/combat.html
@@ -322,4 +322,5 @@
   <div class="scion-label-title">
     <h2>Experience</h2>
   </div>
+  <input type="text" data-action="update-xp" value="{{system.experience.value}}">
 </div>
