--- a/styles/partials/combat.css
+++ b/styles/partials/combat.css
@@ -292,3 +292,13 @@
   display: flex;
   align-items: center;
 }
+
+.experience {
+  align-items: center;
+}
+
+.experience input[type="text"] {
+  width: 80%;
+  height: 33px;
+  padding: 10px;
+}
